# naiad_common

./: .gitignore  CMakeLists.txt  Makefile  README.md  package.xml
docs/: cmake.md  docopt.md  logger.md
include/common/: core_dump.h  cxxargs.h  libuv_utils.h  logger.h  main_option.h  network_client.h  network_frame.h  serial_port.h  slog_logger.h  slog_sink_none.h  slog_sink_ros.h  slog_sink_spdlog.h  slog_sink_stdout.h  sys_time.h  tcp_server.h  uptime.h  uv_helper.h  vofa_service.h
libs-install/x86_64/lib/: libdocopt.so.0.6.2  libuv.so.1.0.0
libs-install/x86_64/lib/cmake/docopt/: docopt-targets-noconfig.cmake  docopt-targets.cmake
libs-install/x86_64/lib/cmake/libuv/: libuvConfig.cmake
libs-install/x86_64/lib/pkgconfig/: libuv.pc
rules/: common-config.cmake.in
src/: CMakeLists.txt  logger.cpp  main.cpp  serial_port.cpp  slog_logger.cpp  slog_sink_spdlog.cpp  slog_sink_stdout.cpp  tcp_server.cpp  test_serial.cpp  uv_helper.cpp
test/: CMakeLists.txt  test_abort.cpp  test_args.cpp  test_libuv.cpp  test_promise.cpp  test_serial.cpp  test_tcp_serial.cpp  test_tcp_server.cpp  test_vofa.cpp
tools/: build-libs.json  build-libs.py  make_build.py  setlocalversion
zips/: CMakeLists.txt
